Changelog
=========


2.14.6 (unreleased)
-------------------

- Fix collective.z3cform.datagridfield import. [mathias.leimgruber]


2.14.5 (2020-10-12)
-------------------

- ftw.logo integration: create new cachkey upon receiving a logo. [mathias.leimgruber]


2.14.4 (2020-03-20)
-------------------

- Extend tests of constrained types adapter. [djowett-ftw]
- Abbreviate extraction of constrained_types when not ENABLED. [djowett-ftw]


2.14.3 (2020-03-05)
-------------------

- Fix transfer of date and time objects [Nachtalb]
- Fix timezone transfer of datetime and time objects [Nachtalb]


2.14.2 (2020-02-26)
-------------------

- Add constrain types adapter. [tinagerber]


2.14.1 (2020-02-05)
-------------------

- "_order" Attribute on portlet manager needs to be a persistent list. [mathias.leimgruber]


2.14.0 (2020-01-31)
-------------------

- Fix Plone4 test setup [Nachtalb]
- Add API endpoint to get parent belonging to child (recursively) [Nachtalb]


2.13.2 (2020-01-15)
-------------------

- Disable plone.app.event fix for Plone 5. [jone]


2.13.1 (2019-11-29)
-------------------

- Fix bug when deleting children without ``ftw.trash`` installed. [jone]


2.13.0 (2019-11-26)
-------------------

- Update to newest ftw.testing>2. [jone]
- Drop ftw.contentpage support. Make sure to not have ftw.contentpage installed when updating. [jone]


2.12.1 (2019-11-11)
-------------------

- Use plone.app.uuid to resolve uuids to support plone 5 [Nachtalb]
- Fix publishing of types with IShortName behaviour [Nachtalb]


2.12.0 (2019-10-18)
-------------------

- Replace "is_sl_contentish" function with "belongs_to_parent".
  This requires an update of `ftw.publisher.sender` to the compatible
  version. The new implementation is more generic. [jone]

- Replace the Simplelayout-specific "RemoveDeletedSLContentishChildren"
  adapter with a generic "RemoveChildren" adapter so that it also works
  for other kind of content, such as PloneFormGen. [jone]
