@@ -6,6 +6,7 @@ Changelog
 -------------------
 
 - Fix collective.z3cform.datagridfield import. [mathias.leimgruber]
+- Fix set blacklist status if no context portlet is available. [mathias.leimgruber]
 
 
 2.14.5 (2020-10-12)
